<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: -42</string>
    <string name="followerCount">Followers: -42</string>
    <string name="dot">•</string>
    <string name="sampleTime">DATE OF THE STATUS</string>
    <string name="sampleStatusMessage">This is an example of a really long status message. This should be displayed under the picture and date and should look all fancy.</string>
    <string name="tweeter">tweeter</string>
    <string name="passwordHint">password</string>
    <string name="usernameHint">\@username</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">REGISTER</string>
    <string name="firstNameHint">first name</string>
    <string name="lastNameHint">last name</string>
    <string name="takeProfilePicture">Take Profile Picture</string>
    <string name="logoutButton">LOGOUT</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="following">FOLLOWING</string>
    <string name="follow">FOLLOW</string>
    <string name="postStatus">POST STATUS</string>
    <string name="cancel">CANCEL</string>
    <string name="postMessageHint">What\'s on your mind?</string>
    <string name="post_a_new_status">Post a new status</string>
</resources>
