<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.login.fragments.RegisterFragment">

    <TableLayout
        android:stretchColumns="1"
        android:layout_margin="56dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TableRow>
            <EditText
                android:id="@+id/firstNameField"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/firstNameHint"
                android:inputType="text"
                android:layout_span="3" />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastNameHint"
                android:inputType="text"
                android:layout_span="3" />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/userNameField"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:layout_span="3" />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:layout_span="3" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/takeProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/takeProfilePicture"
                android:layout_span="3" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerButton"
                android:layout_span="3" />
        </TableRow>

    </TableLayout>

</LinearLayout>