<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.main.fragments.StatusFragment">

    <RelativeLayout
        android:id="@+id/mainLinLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/userImageContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/userImage"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="@string/sampleUserName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/dot" />

                <TextView
                    android:id="@+id/userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sampleAlias" />
            </LinearLayout>

            <TextView
                android:id="@+id/statusTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampleTime" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLinLayout"
        android:paddingHorizontal="15dp"
        android:paddingBottom="5dp"
        android:textSize="20sp"
        tools:text="@string/sampleStatusMessage"/>

    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width = "match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/statusMessage" />
</RelativeLayout>