<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:paddingTop="8dp"
        android:paddingHorizontal="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/userImagePost"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/userImageContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/userImagePost"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/userNamePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleUserName"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/userAliasPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleAlias"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

    <EditText
        android:id="@+id/messagePost"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/postMessageHint"
        android:gravity="start"
        android:maxLength="150" />

</LinearLayout>